unpackaged/main/default/objects/Issued_Book__c/Issued_Book__c.object-meta.xml
<CustomObject>
    <label>Issued_Book</label>
    <nameField>
        <label>Issued_Books Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issued_Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>