unpackaged/main/default/objects/Issued_Book__c/fields/B_Name__c.field-meta.xml
<CustomField>
    <fullName>B_Name__c</fullName>
    <label>BOOK</label>
    <referenceTo>BOOK__c</referenceTo>
    <relationshipLabel>Issued_Books</relationshipLabel>
    <relationshipName>Issued_Books</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>