unpackaged/main/default/objects/Issued_Book__c/fields/Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No__c</fullName>
    <label>Mobile No</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>