unpackaged/main/default/objects/Issued_Book__c/fields/Penalty__c.field-meta.xml
<CustomField>
    <fullName>Penalty__c</fullName>
    <label>Penalty</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>