unpackaged/main/default/objects/Issued_Book__c/fields/Penalty_fees__c.field-meta.xml
<CustomField>
    <fullName>Penalty_fees__c</fullName>
    <label>Penalty_fees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>