unpackaged/main/default/objects/Issued_Book__c/fields/Return_date__c.field-meta.xml
<CustomField>
    <fullName>Return_date__c</fullName>
    <label>Return date</label>
    <type>Date</type>
</CustomField>