unpackaged/main/default/objects/Issued_Book__c/fields/Rool_Number__c.field-meta.xml
<CustomField>
    <fullName>Rool_Number__c</fullName>
    <label>Rool_Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>