unpackaged/main/default/objects/Issued_Book__c/fields/S_Name__c.field-meta.xml
<CustomField>
    <fullName>S_Name__c</fullName>
    <label>STU</label>
    <referenceTo>STU__c</referenceTo>
    <relationshipLabel>Issued_Books</relationshipLabel>
    <relationshipName>Issued_Books</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>